[gd_scene load_steps=21 format=3 uid="uid://b2po2hcbr0dwk"]

[ext_resource type="Script" path="res://addons/file_editor/comp/FE_Main.gd" id="1_ye7uv"]
[ext_resource type="Script" path="res://addons/file_editor/comp/menu_top.gd" id="2_2e6gq"]
[ext_resource type="Script" path="res://addons/file_editor/comp/confirmation_dialog.gd" id="2_ou848"]
[ext_resource type="Script" path="res://addons/file_editor/comp/file_dialog.gd" id="2_xi4e3"]
[ext_resource type="Script" path="res://addons/file_editor/comp/FE_Files.gd" id="2_ynr54"]
[ext_resource type="Script" path="res://addons/file_editor/comp/file_list.gd" id="3_5namj"]
[ext_resource type="Script" path="res://addons/file_editor/comp/chapter_list.gd" id="4_r00tw"]
[ext_resource type="Script" path="res://addons/file_editor/comp/meta_panel.gd" id="4_td4f3"]
[ext_resource type="Script" path="res://addons/file_editor/comp/menu_text_input.gd" id="5_xlouk"]
[ext_resource type="Font" uid="uid://d3fbcmrfhtxef" path="res://addons/file_editor/fonts/fe_font.tres" id="6_g230f"]
[ext_resource type="Script" path="res://addons/file_editor/FE_OptionsMenu.gd" id="6_gx06r"]
[ext_resource type="Script" path="res://addons/file_editor/comp/drag_file.gd" id="6_mfpeu"]
[ext_resource type="Script" path="res://addons/file_editor/comp/FE_Editors.gd" id="8_pt73u"]
[ext_resource type="Font" uid="uid://dy2fxolj7w2fp" path="res://addons/file_editor/fonts/fe_font_i.tres" id="9_bhqdw"]
[ext_resource type="Font" uid="uid://172wll6pmlxo" path="res://addons/file_editor/fonts/fe_font_b.tres" id="10_oekq3"]
[ext_resource type="Script" path="res://addons/file_editor/comp/editor_tabs.gd" id="11_ylho7"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1gems"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4

[sub_resource type="Theme" id="Theme_42bqx"]
VScrollBar/styles/scroll = SubResource( "StyleBoxFlat_1gems" )

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_mr5r7"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_fuis2"]

[node name="file_editor" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( "1_ye7uv" )
_files = NodePath("files")
_editors = NodePath("c/c/c/c2/c/editors")
_confirmation_dialogue = NodePath("confirmation_dialog")
_file_dialogue = NodePath("file_dialog")

[node name="files" type="Node" parent="."]
script = ExtResource( "2_ynr54" )
show_file_extension = {
"cfg": true,
"csv": false,
"gd": false,
"ini": true,
"json": true,
"md": true,
"soot": true,
"tres": false,
"txt": false,
"yaml": true
}

[node name="confirmation_dialog" type="ConfirmationDialog" parent="."]
script = ExtResource( "2_ou848" )

[node name="file_dialog" type="FileDialog" parent="."]
show_hidden_files = true
script = ExtResource( "2_xi4e3" )

[node name="c" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="menu_top" type="HBoxContainer" parent="c"]
offset_right = 1024.0
offset_bottom = 31.0
script = ExtResource( "2_2e6gq" )
_l_version = NodePath("version")

[node name="file" type="MenuButton" parent="c/menu_top"]
offset_right = 35.0
offset_bottom = 31.0
text = "File"
item_count = 2
popup/item_0/text = "Set Folder"
popup/item_0/id = 0
popup/item_1/text = "Add Folder"
popup/item_1/id = 1

[node name="edit" type="MenuButton" parent="c/menu_top"]
offset_left = 39.0
offset_right = 77.0
offset_bottom = 31.0
text = "Edit"
item_count = 4
popup/item_0/text = "Undo"
popup/item_0/id = 0
popup/item_1/text = "Redo"
popup/item_1/id = 1
popup/item_2/text = "Zoom"
popup/item_2/id = 2
popup/item_3/text = "Unzoom"
popup/item_3/id = 3

[node name="view" type="MenuButton" parent="c/menu_top"]
offset_left = 81.0
offset_right = 126.0
offset_bottom = 31.0
text = "View
"
item_count = 2
popup/item_0/text = "Directories"
popup/item_0/id = 0
popup/item_1/text = "Files"
popup/item_1/id = 1

[node name="space" type="Control" parent="c/menu_top"]
offset_left = 130.0
offset_right = 950.0
offset_bottom = 31.0
size_flags_horizontal = 3

[node name="version" type="Label" parent="c/menu_top"]
modulate = Color(1, 1, 1, 0.25)
offset_left = 954.0
offset_top = 4.0
offset_right = 1004.0
offset_bottom = 27.0
theme_override_fonts/font = ExtResource( "6_g230f" )
text = "v1.12"
horizontal_alignment = 1
vertical_alignment = 1

[node name="c" type="Control" parent="c/menu_top"]
rect_min_size = Vector2(16, 0)
offset_left = 1008.0
offset_right = 1024.0
offset_bottom = 31.0

[node name="c" type="VSplitContainer" parent="c"]
offset_top = 35.0
offset_right = 1024.0
offset_bottom = 600.0
size_flags_vertical = 3
split_offset = 100

[node name="c" type="HSplitContainer" parent="c/c"]
offset_right = 1024.0
offset_bottom = 565.0
size_flags_horizontal = 3
size_flags_vertical = 3
split_offset = 120

[node name="c" type="MarginContainer" parent="c/c/c"]
offset_right = 171.0
offset_bottom = 565.0
size_flags_vertical = 3
theme_override_constants/margin_left = 4

[node name="file_list" type="VBoxContainer" parent="c/c/c/c"]
offset_left = 4.0
offset_right = 171.0
offset_bottom = 565.0
script = ExtResource( "3_5namj" )
_popup = NodePath("popup")
_filter = NodePath("filter")
_list = NodePath("list")

[node name="title" type="Label" parent="c/c/c/c/file_list"]
visible = false
modulate = Color(1, 1, 1, 0.5)
offset_right = 190.0
offset_bottom = 26.0
text = "FOLDERS"

[node name="popup" type="PopupMenu" parent="c/c/c/c/file_list"]
script = ExtResource( "6_gx06r" )

[node name="filter" type="LineEdit" parent="c/c/c/c/file_list"]
offset_right = 167.0
offset_bottom = 28.0
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource( "6_g230f" )
placeholder_text = "Filter"
clear_button_enabled = true
flat = true

[node name="list" type="RichTextLabel" parent="c/c/c/c/file_list"]
offset_top = 32.0
offset_right = 167.0
offset_bottom = 565.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_fonts/italics_font = ExtResource( "9_bhqdw" )
theme_override_fonts/bold_font = ExtResource( "10_oekq3" )
theme_override_fonts/normal_font = ExtResource( "6_g230f" )
theme_override_font_sizes/mono_font_size = 14
theme_override_font_sizes/bold_italics_font_size = 14
theme_override_font_sizes/italics_font_size = 14
theme_override_font_sizes/bold_font_size = 14
theme_override_font_sizes/normal_font_size = 14
bbcode_enabled = true
text = "..."
meta_underlined = false
autowrap_mode = 0

[node name="drag_object" type="ColorRect" parent="c/c/c/c/file_list"]
visible = false
rect_min_size = Vector2(0, 24)
offset_top = -31.0
offset_right = 190.0
offset_bottom = -7.0
color = Color(0, 0, 0, 1)
script = ExtResource( "6_mfpeu" )

[node name="label" type="RichTextLabel" parent="c/c/c/c/file_list/drag_object"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "file"
fit_content_height = true

[node name="c2" type="HSplitContainer" parent="c/c/c"]
offset_left = 183.0
offset_right = 1024.0
offset_bottom = 565.0
size_flags_horizontal = 3
size_flags_vertical = 3
split_offset = 200

[node name="c" type="VBoxContainer" parent="c/c/c/c2"]
offset_right = 614.0
offset_bottom = 565.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="menu_text_input" type="PanelContainer" parent="c/c/c/c2/c"]
visible = false
offset_right = 603.0
offset_bottom = 31.0
script = ExtResource( "5_xlouk" )

[node name="c" type="HBoxContainer" parent="c/c/c/c2/c/menu_text_input"]
offset_right = 603.0
offset_bottom = 31.0

[node name="label" type="Label" parent="c/c/c/c2/c/menu_text_input/c"]
offset_top = 2.0
offset_right = 90.0
offset_bottom = 28.0
text = "New Name:"

[node name="input" type="LineEdit" parent="c/c/c/c2/c/menu_text_input/c"]
offset_left = 94.0
offset_right = 603.0
offset_bottom = 31.0
size_flags_horizontal = 3

[node name="editors" type="VBoxContainer" parent="c/c/c/c2/c"]
offset_right = 614.0
offset_bottom = 565.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 0
script = ExtResource( "8_pt73u" )
_meta_panel = NodePath("editor_meta")
_error_label = NodePath("editor_meta/errors")
_meta_label = NodePath("editor_meta/meta")
word_wrap = false
font_size = 16

[node name="tab_bar" type="TabBar" parent="c/c/c/c2/c/editors"]
offset_right = 614.0
theme = SubResource( "Theme_42bqx" )
theme_override_colors/font_disabled_color = Color(1, 1, 1, 0)
theme_override_colors/font_selected_color = Color(1, 1, 1, 0)
theme_override_colors/font_unselected_color = Color(1, 1, 1, 0)
theme_override_constants/hseparation = 24
theme_override_styles/tab_selected = SubResource( "StyleBoxEmpty_mr5r7" )
theme_override_styles/tab_unselected = SubResource( "StyleBoxEmpty_fuis2" )
tab_alignment = 0
tab_close_display_policy = 2
drag_to_rearrange_enabled = true
script = ExtResource( "11_ylho7" )

[node name="editor_parent" type="MarginContainer" parent="c/c/c/c2/c/editors"]
offset_right = 614.0
offset_bottom = 545.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_right = 0
theme_override_constants/margin_top = 0
theme_override_constants/margin_left = 0
theme_override_constants/margin_bottom = 0

[node name="editor_meta" type="HBoxContainer" parent="c/c/c/c2/c/editors"]
offset_top = 545.0
offset_right = 614.0
offset_bottom = 565.0

[node name="errors" type="RichTextLabel" parent="c/c/c/c2/c/editors/editor_meta"]
offset_right = 305.0
offset_bottom = 20.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_fonts/italics_font = ExtResource( "9_bhqdw" )
theme_override_fonts/bold_font = ExtResource( "10_oekq3" )
theme_override_fonts/normal_font = ExtResource( "6_g230f" )
bbcode_enabled = true
text = "ERR: 0"
fit_content_height = true

[node name="meta" type="RichTextLabel" parent="c/c/c/c2/c/editors/editor_meta"]
offset_left = 309.0
offset_right = 614.0
offset_bottom = 20.0
size_flags_horizontal = 3
theme_override_fonts/italics_font = ExtResource( "9_bhqdw" )
theme_override_fonts/bold_font = ExtResource( "10_oekq3" )
theme_override_fonts/normal_font = ExtResource( "6_g230f" )
bbcode_enabled = true
text = "1:0"
fit_content_height = true

[node name="c3" type="VSplitContainer" parent="c/c/c/c2"]
offset_left = 626.0
offset_right = 841.0
offset_bottom = 565.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 20

[node name="MarginContainer" type="MarginContainer" parent="c/c/c/c2/c3"]
offset_right = 215.0
offset_bottom = 272.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_right = 4

[node name="chapter_list" type="VBoxContainer" parent="c/c/c/c2/c3/MarginContainer"]
offset_right = 211.0
offset_bottom = 272.0
size_flags_vertical = 3
script = ExtResource( "4_r00tw" )
_popup = NodePath("popup")
_filter = NodePath("filter")
_list = NodePath("list")

[node name="title" type="Label" parent="c/c/c/c2/c3/MarginContainer/chapter_list"]
visible = false
modulate = Color(1, 1, 1, 0.5)
offset_right = 199.0
offset_bottom = 26.0
text = "FILE OUTLINE"

[node name="popup" type="PopupMenu" parent="c/c/c/c2/c3/MarginContainer/chapter_list"]
item_count = 1
item_0/text = "asss"
item_0/id = 0
script = ExtResource( "6_gx06r" )

[node name="filter" type="LineEdit" parent="c/c/c/c2/c3/MarginContainer/chapter_list"]
offset_right = 211.0
offset_bottom = 28.0
theme_override_fonts/font = ExtResource( "6_g230f" )
placeholder_text = "Filter"
clear_button_enabled = true
flat = true

[node name="list" type="RichTextLabel" parent="c/c/c/c2/c3/MarginContainer/chapter_list"]
offset_top = 32.0
offset_right = 211.0
offset_bottom = 272.0
size_flags_vertical = 3
theme_override_fonts/italics_font = ExtResource( "9_bhqdw" )
theme_override_fonts/bold_font = ExtResource( "10_oekq3" )
theme_override_fonts/normal_font = ExtResource( "6_g230f" )
theme_override_font_sizes/mono_font_size = 14
theme_override_font_sizes/bold_italics_font_size = 14
theme_override_font_sizes/italics_font_size = 14
theme_override_font_sizes/bold_font_size = 14
theme_override_font_sizes/normal_font_size = 14
bbcode_enabled = true
text = "*none*"
meta_underlined = false
autowrap_mode = 0

[node name="MarginContainer2" type="MarginContainer" parent="c/c/c/c2/c3"]
offset_top = 292.0
offset_right = 215.0
offset_bottom = 565.0
size_flags_vertical = 3
theme_override_constants/margin_right = 4

[node name="VBoxContainer" type="VBoxContainer" parent="c/c/c/c2/c3/MarginContainer2"]
offset_right = 211.0
offset_bottom = 273.0
size_flags_vertical = 3

[node name="title" type="Label" parent="c/c/c/c2/c3/MarginContainer2/VBoxContainer"]
visible = false
modulate = Color(1, 1, 1, 0.5)
offset_right = 201.0
offset_bottom = 26.0
text = "GLOBAL TAGS"

[node name="tags_list" type="RichTextLabel" parent="c/c/c/c2/c3/MarginContainer2/VBoxContainer"]
offset_right = 211.0
offset_bottom = 273.0
size_flags_vertical = 3
theme_override_fonts/italics_font = ExtResource( "9_bhqdw" )
theme_override_fonts/bold_font = ExtResource( "10_oekq3" )
theme_override_fonts/normal_font = ExtResource( "6_g230f" )
text = "*none*"

[node name="meta_panels" type="TabContainer" parent="c/c"]
visible = false
offset_top = 388.0
offset_right = 1024.0
offset_bottom = 565.0
size_flags_vertical = 3
tab_alignment = 0
script = ExtResource( "4_td4f3" )

[node name="console" type="VBoxContainer" parent="c/c/meta_panels"]
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 31.0

[node name="console_output" type="RichTextLabel" parent="c/c/meta_panels/console"]
offset_right = 1024.0
offset_bottom = 111.0
size_flags_vertical = 3
text = "> okay"

[node name="console_input" type="LineEdit" parent="c/c/meta_panels/console"]
offset_top = 115.0
offset_right = 1024.0
offset_bottom = 146.0
